--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   window.ws = { readyState: WebSocket.CLOSED }
   window.heartbeat = () => {
     if (ws.readyState !== WebSocket.CLOSED) return
-    ws = new WebSocket('ws://192.168.86.27:1111')
+    ws = new WebSocket('ws://127.0.0.1:1111')
     ws.onopen = e => wsopen(e)
     ws.onclose = e => wsclose(e)
     ws.onmessage = e => wsmessage(e)
@@ -27,17 +27,15 @@
     el: 'main',
     data: { db: {} },
     created() {
-      window.wsflag = false
+      window.wsflag = null
       window.wsopen = e => {
         console.log('wsopen', localStorage.wspull || '0')
         ws.send(localStorage.wspull || '0')
       }
       window.wsmessage = e => {
         const patch = JSON.parse(e.data)
-        if (patch.length) console.log('pull', patch)
-        if (patch.length) window.wsflag = true
         if (patch.length) this.db = jsonpatch.applyPatch(this.db, patch, true, false).newDocument
-        localStorage.wspull = Date.now()
+        wsflag = localStorage.wspull = Date.now()
       }
       const debounce = (fn, ms = 0) => (...args) => {
         clearTimeout(fn.timeout)
@@ -46,9 +44,7 @@
       const s = () => {
         idb.get('rawws').then(db => {
           const patch = jsonpatch.compare(db || {}, this.db)
-          if (patch.length && !window.wsflag) console.log('push', patch)
-          if (patch.length && !window.wsflag) ws.send(JSON.stringify(patch))
-          window.wsflag = false
+          if (patch.length && !wsflag) wsflag = ws.send(JSON.stringify(patch))
           idb.set('rawws', this.db)
         })
       }
