--- a/index.html
+++ b/index.html
@@ -1,59 +1,45 @@
-<script>
-  window.ws = { readyState: WebSocket.CLOSED }
-  window.heartbeat = () => {
-    if (ws.readyState !== WebSocket.CLOSED) return
-    ws = new WebSocket('ws://127.0.0.1:1111')
-    ws.onopen = e => wsopen(e)
-    ws.onclose = e => wsclose(e)
-    ws.onmessage = e => wsmessage(e)
-    ws.onerror = e => wserror(e)
+<style>
+  body {
+    margin: 100px auto;
+    width: fit-content;
+    height: fit-content;
   }
-  setInterval(heartbeat, 1000)
-</script>
-<main>
-  <pre v-text="db"></pre>
-  <hr />
-  <input v-model="db.truc" />
-  <input v-model="db.bidule" />
-  <button @click="db = {}">Reset</button>
-</main>
+</style>
+<pre>{}</pre>
+<textarea oninput="rawws.push(Object.assign({}, rawws.storage, { first: event.target.value }))"></textarea>
+<textarea oninput="rawws.push(Object.assign({}, rawws.storage, { second: event.target.value }))"></textarea>
+
 <script src="https://unpkg.com/fast-json-patch@2.1.0/dist/fast-json-patch.js"></script>
 <script type="module">
-  import Vue from 'https://unpkg.com/vue@2.6.10/dist/vue.esm.browser.js'
   import * as idb from 'https://unpkg.com/idb-keyval@3.1.0/dist/idb-keyval.mjs'
-  Vue.config.productionTip = false
-  Vue.prototype.window = window
-  new Vue({
-    el: 'main',
-    data: { db: {} },
-    created() {
-      window.wsflag = null
-      window.wsopen = e => {
-        console.log('wsopen', localStorage.wspull || '0')
-        ws.send(localStorage.wspull || '0')
-      }
-      window.wsmessage = e => {
-        const patch = JSON.parse(e.data)
-        if (patch.length) this.db = jsonpatch.applyPatch(this.db, patch, true, false).newDocument
-        wsflag = localStorage.wspull = Date.now()
-      }
-      const debounce = (fn, ms = 0) => (...args) => {
-        clearTimeout(fn.timeout)
-        fn.timeout = setTimeout(() => fn(...args), ms)
-      }
-      const s = () => {
-        idb.get('rawws').then(db => {
-          const patch = jsonpatch.compare(db || {}, this.db)
-          if (patch.length && !wsflag) wsflag = ws.send(JSON.stringify(patch))
-          idb.set('rawws', this.db)
-        })
-      }
-      const save = debounce(s, 100)
-      idb.get('rawws').then(db => {
-        this.db = db || {}
-        this.$watch('db', save, { deep: true })
-      })
-      window.onbeforeunload = s
+  window.ws = {}
+  window.rawws = {
+    async start() {
+      if (!rawws.storage) rawws.storage = (await idb.get('rawws')) || {}
+      if (!rawws.interval) rawws.interval = setInterval(() => ws.readyState === WebSocket.CLOSED && rawws.start(), 10000)
+      ws = new WebSocket('ws://127.0.0.1:1111')
+      ws.onopen = e => ws.send(localStorage.rawws || '0')
+      ws.onmessage = e => rawws.pull(e.data)
     },
-  })
+    pull(msg) {
+      console.log('pull', msg)
+      const patch = JSON.parse(msg)
+      jsonpatch.applyPatch(rawws.storage, patch)
+      localStorage.rawws = Date.now()
+      rawws.push(true)
+    },
+    push(any) {
+      console.log('push', any)
+      if (typeof any === 'object') {
+        const patch = jsonpatch.compare(rawws.storage, any)
+        ws.send(JSON.stringify(patch))
+        rawws.storage = any
+      }
+      idb.set('rawws', rawws.storage)
+      document.querySelector('pre').innerText = JSON.stringify(rawws.storage, null, 2)
+      document.querySelector('textarea:first-of-type').value = rawws.storage.first || ''
+      document.querySelector('textarea:nth-of-type(2)').innerText = rawws.storage.second || ''
+    },
+  }
+  rawws.start()
 </script>
